--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,10 @@ search:
   field: post
   format: html
   limit: 10000
+sitemap:
+  path: sitemap.xml
+baidusitemap:
+  path: baidusitemap.xml
 deploy:
   type: git
   repository: git@github.com:serenityd/serenityd.github.io.git
