--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 人生如逆旅 我亦是行人
 author: Serenityd
 language: zh-Hans
 timezone:
-url: http://dnysu.cn/
+url: http://dnysu.cn
 theme: next
 menu_icons:
   enable: true
